tickets non attribues

--- a/src/main/resources/templates/template/affectation-ticket.html
+++ b/src/main/resources/templates/template/affectation-ticket.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/index}">
 <head>
     <meta charset="UTF-8">
-    <title>Tickets</title>
+    <title>Title</title>
     <link th:href="@{/style/bootstrap.min.css}" rel="stylesheet"/>
     <link th:href="@{/style/style.css}" rel="stylesheet"/>
 </head>
 <body>
-TEST
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
