--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -9,21 +9,19 @@
 </head>
 <body>
 
-<form class="form-signin" method="post" th:object="${user}" th:action="@{/users/login}" >
+<form class="form-signin" method="post"  th:action="@{/users/login}" >
 
-    <ul th:if="${#fields.hasErrors('*')}"  class="alert alert-danger" role="alert">
+   <!-- <ul th:if="${#fields.hasErrors('*')}"  class="alert alert-danger" role="alert">
         <li th:each="err : ${#fields.errors('*')}" th:text="${err}" />
-    </ul>
+    </ul>-->
     <h1 class="h3 mb-3 font-weight-normal">Login</h1>
 
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" name="email" th:field="*{email}" class="form-control mb-2" placeholder="Email address" required=""
-           autofocus="">
-    <!--<p th:if="${#fields.hasErrors('email')}"  th:errors="*{email}"></p>-->
+    <label for="inputUsername" class="sr-only">Username</label>
+    <input type="text" id="inputUsername" name="username"  class="form-control mb-2" placeholder="Username" required
+           autofocus>
 
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" name="password" th:field="*{password}" class="form-control" placeholder="Password" required="">
-    <!--<p th:if="${#fields.hasErrors('password')}"  th:errors="*{password}"></p>-->
+    <input type="password" id="inputPassword" name="password"  class="form-control" placeholder="Password" required>
 
     <div class="checkbox mb-3">
         <label>
