--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/tickets/admin}">Tickets</a> <!-- pour l'admin -->
+                    <a class="nav-link" th:href="@{/admin/tickets}">Tickets</a> <!-- pour l'admin -->
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ajout</a> <!-- pour le client -->
@@ -38,7 +38,7 @@
     </nav>
 </header>
 <main layout:fragment="contenu" class="container">
-
+    Contenu principale
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
