--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -16,19 +16,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/admin/tickets}">Tickets</a> <!-- pour l'admin -->
+                    <a class="nav-link" th:href="@{/admin/tickets}">Tickets</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Ajout</a> <!-- pour le client -->
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/developpeur/tickets}">Tickets</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tickets</a> <!-- pour le client -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tickets</a> <!-- pour le developpeur -->
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Modification</a> <!-- pour le developpeur -->
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/client/tickets}">Tickets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Logout</a> <!-- pour tous -->
