--- a/src/main/resources/templates/template/admin/tickets-liste.html
+++ b/src/main/resources/templates/template/admin/tickets-liste.html
@@ -10,7 +10,10 @@
 <body>
 <main layout:fragment="contenu">
     <div class="card">
-        <div class="card-header">Liste des tickets non attribué</div>
+        <div class="card-header">
+            Liste des tickets
+            <a th:href="@{/client/ticket/add}" class="btn btn-outline-primary w-25" style="float: right">Ajouter</a>
+        </div>
         <div class="card-body">
             <table class="table">
                 <thead class="thead-light">
