--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Tickets</title>
@@ -7,33 +9,35 @@
     <link th:href="@{/style/style.css}" rel="stylesheet"/>
 </head>
 <body>
+
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item active" sec:authorize="hasAnyAuthority('ADMIN')">
                     <a class="nav-link" th:href="@{/admin/tickets}">Tickets</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item active" sec:authorize="hasAnyAuthority('DEVELOPPEUR')">
                     <a class="nav-link" th:href="@{/developpeur/tickets}">Tickets</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item active" sec:authorize="hasAnyAuthority('CLIENT')">
                     <a class="nav-link" th:href="@{/client/tickets}">Tickets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a> <!-- pour tous -->
+                    <a class="nav-link" th:href="@{/logout}" th:method="post">Deconnexion</a>
                 </li>
             </ul>
         </div>
     </nav>
 </header>
 <main layout:fragment="contenu" class="container">
-    Contenu principale
 </main>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
