--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -1,3 +1,7 @@
+*{
+
+}
+
 html,
 body {
   height: 100%;
@@ -12,3 +16,8 @@ main {
 .error-template {padding: 40px 15px;text-align: center;}
 .error-actions {margin-top:15px;margin-bottom:15px;}
 .error-actions .btn { margin-right:10px; }
+
+nav{
+  background-color: white !important;
+  border-bottom: 1px solid #dbdbdb;
+}
