--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -11,22 +11,16 @@
 <body>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">GESTION TICKETS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active" sec:authorize="hasAnyAuthority('ADMIN')">
-                    <a class="nav-link" th:href="@{/admin/tickets}">Tickets</a>
-                </li>
-                <li class="nav-item active" sec:authorize="hasAnyAuthority('DEVELOPPEUR')">
-                    <a class="nav-link" th:href="@{/developpeur/tickets}">Tickets</a>
-                </li>
-                <li class="nav-item active" sec:authorize="hasAnyAuthority('CLIENT')">
-                    <a class="nav-link" th:href="@{/client/tickets}">Tickets</a>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/}">Tickets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/logout}" th:method="post">Deconnexion</a>
