--- a/src/main/resources/templates/template/tickets-liste.html
+++ b/src/main/resources/templates/template/tickets-liste.html
@@ -13,7 +13,7 @@
     <div class="card">
         <div class="card-header">
             Liste des tickets
-            <a th:href="@{/client/ticket/add}"  sec:authorize="hasAnyAuthority('CLIENT')" class="btn btn-outline-primary w-25" style="float: right">Ajouter</a>
+            <a th:href="@{/client/ticket/add}"  sec:authorize="hasAnyAuthority('CLIENT')" class="btn btn-outline-primary" style="float: right">Ajouter</a>
         </div>
         <div class="card-body">
             <table class="table">
