--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -1,7 +1,6 @@
 *{
-
+  font-family: 'Cairo', sans-serif;
 }
-
 html,
 body {
   height: 100%;
@@ -20,4 +19,9 @@ main {
 nav{
   background-color: white !important;
   border-bottom: 1px solid #dbdbdb;
+}
+
+.card-header {
+  text-align: center;
+  font-size: 25px;
 }
